trying to fix cards on safari

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -130,8 +130,8 @@ body.details {
 
   & > .include.cards {
     display: grid;
-    grid-template-columns: subgrid;
-    grid-column: content;
+    grid-template-columns: var(--section-template-columns);
+    grid-column: full-width;
   }
 
   /* this may have caused a weird breaking issue on mobile safari where the width isn't calculated correctly until rotating the device */
